<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.wikimedia</groupId>
        <artifactId>wmf-jvm-parent-pom</artifactId>
        <version>1.102</version>
    </parent>

    <groupId>org.wikimedia.search</groupId>
    <artifactId>opensearch-extra-analysis</artifactId>
    <version>3.8.0-wmf1</version>
    <packaging>pom</packaging>
    <name>OpenSearch extra plugins (GPL)</name>
    <description>Extra (GPL) Analysis Modules for Elasticsearch.</description>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3</name>
            <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>opensearch-extra-analysis-esperanto</module>
        <module>opensearch-extra-analysis-serbian</module>
    </modules>

    <scm>
        <connection>scm:git:https://gerrit.wikimedia.org/r/search/extra-analysis</connection>
        <developerConnection>scm:git:ssh://gerrit.wikimedia.org:29418/search/extra-analysis</developerConnection>
        <tag>HEAD</tag>
        <url>https://gerrit.wikimedia.org/r/#/admin/projects/search/extra-analysis</url>
    </scm>

    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/wikimedia/extra-analysis/issues</url>
    </issueManagement>

    <properties>
        <hamcrest.version>2.1</hamcrest.version>
        <log4j.version>2.17.1</log4j.version>
        <lucene.version>10.5.0</lucene.version>
        <maven.compiler.showWarnings>true</maven.compiler.showWarnings>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <opensearch.version>3.8.0</opensearch.version>
        <randomizedtesting.version>2.7.1</randomizedtesting.version>
        <spotless.ratchetFrom>origin/master</spotless.ratchetFrom>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-analysis-common</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-core</artifactId>
                <version>${lucene.version}</version>
            </dependency>
            <dependency>
                <groupId>org.opensearch</groupId>
                <artifactId>opensearch</artifactId>
                <version>${opensearch.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wikimedia.search</groupId>
                <artifactId>opensearch-extra-analysis-esperanto</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.wikimedia.search</groupId>
                <artifactId>opensearch-extra-analysis-serbian</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-api</artifactId>
                <version>${log4j.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-core</artifactId>
                <version>${log4j.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <!-- Must come before Elasticsearch dependency. -->
                <groupId>org.apache.lucene</groupId>
                <artifactId>lucene-test-framework</artifactId>
                <version>${lucene.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-core</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.hamcrest</groupId>
                <artifactId>hamcrest-library</artifactId>
                <version>${hamcrest.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.opensearch.test</groupId>
                <artifactId>framework</artifactId>
                <version>${opensearch.version}</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.hamcrest</groupId>
                        <artifactId>hamcrest-all</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <directory>src/main/resources</directory>
                <includes>
                    <include>*.properties</include>
                </includes>
            </resource>
        </resources>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>com.carrotsearch.randomizedtesting</groupId>
                    <artifactId>junit4-maven-plugin</artifactId>
                    <version>${randomizedtesting.version}</version>
                </plugin>
                <plugin>
                    <groupId>de.is24.mavenplugins</groupId>
                    <artifactId>deadcode4j-maven-plugin</artifactId>
                    <configuration>
                        <superClassesMarkingLiveCode>
                            <liveCode>org.opensearch.plugins.Plugin</liveCode>
                        </superClassesMarkingLiveCode>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>de.thetaphi</groupId>
                    <artifactId>forbiddenapis</artifactId>
                    <configuration>
                        <signaturesArtifacts combine.children="append">
                            <signaturesArtifact>
                                <groupId>org.wikimedia</groupId>
                                <artifactId>wmf-maven-tool-configs</artifactId>
                                <version>${wmf-maven-tool-configs.version}</version>
                                <type>jar</type>
                                <path>org/wikimedia/build/tools/forbidden/lucene-signatures.txt</path>
                            </signaturesArtifact>
                        </signaturesArtifacts>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <configuration>
                        <appendAssemblyId>false</appendAssemblyId>
                        <outputDirectory>${project.build.directory}/releases/</outputDirectory>
                        <descriptors>
                            <descriptor>${basedir}/../src/main/assemblies/plugin.xml</descriptor>
                        </descriptors>
                    </configuration>
                    <executions>
                        <execution>
                            <goals>
                                <goal>single</goal>
                            </goals>
                            <phase>package</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <argLine>@{argLine} -Xmx512m -XX:MaxDirectMemorySize=512m -Des.logger.prefix= -Dtests.gradle=yes -Dtests.security.manager=false</argLine>
                        <excludes>
                            <exclude>**/*IntegrationTest.class</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.pitest</groupId>
                    <artifactId>pitest-maven</artifactId>
                    <configuration>
                        <jvmArgs>
                            <value>-ea</value>
                        </jvmArgs>
                        <mutators>
                            <mutator>ALL</mutator>
                        </mutators>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>
</project>
